Changes to header in html and css

--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
               <button id="live-chat-start">Talk to a live representative</button>
             </section>
           </section>
-          <p>Welcome to 24/7 Teach!</p>
+          <img id= "header-logo" src = "images/twenty-four-seven-teach-logo.png" width = "50px" alt = "24/7 Teach logo">
+          <div>
+            <span>Rebecca-AI</span>
+            <span id = "short-intro"> Our AI powered chatbot can assist you. </span>
+          </div>
           <button id="chat-bot-close" class="chat-bot-button"><img src="images/dash.png" width="20px" alt="dash"></button>
         </header>
         <section id="chat-bot-form">
