--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
               <button id="live-chat-start">Talk to a live representative</button>
             </section>
           </section>
-          <img id= "header-logo" src = "images/twenty-four-seven-teach-logo.png" width = "50px" alt = "24/7 Teach logo">
+          <img id= "header-logo" src = "New Images/orangelogo.png" width = "50px" alt = "24/7 Teach logo">
           <div>
             <span>Rebecca-AI</span>
             <span id = "short-intro"> Our AI powered chatbot can assist you. </span>
           </div>
-          <button id="chat-bot-close" class="chat-bot-button"><img src="images/dash.png" width="20px" alt="dash"></button>
+          <button id="chat-bot-close" class="chat-bot-button"><img src="New Images/x-icon.png" width="20px" alt="x"></button>
         </header>
         <section id="chat-bot-form">
           <p>Welcome to 24/7 live support. Our bot should be able to answer any questions you might have, but our customer support team is always available to help! Before we begin, please provide us with your email and name to better support you.</p><br/>
@@ -38,7 +38,7 @@
           </section>
           <form id="question-submit" onsubmit="return false">
             <input id="question" name="question" type="text">
-            <button type="submit"><img src="images/send-icon.png" width="20px" alt="send-icon"></button>
+            <button type="submit"><img src="New Images/new-send-icon.png" width="20px" alt="send-icon"></button>
           </form>
         </section>
       </section>
