edited script.js and index.html; added some suggested prompts for the user.

--- a/index.html
+++ b/index.html
@@ -35,20 +35,20 @@
 
         <section id="chat-bot-text">
           <section id="messages">
-            <img src="images/orangelogo.png" width="30px" alt="24/7-teach-logo">
+            <img src="New Images/orangelogo.png" width="30px" alt="24/7-teach-logo">
             <p>
-              Welcome to the chat! I'm here to help you. Click the <img src = "images/questionmark.png" width = "20px"> icon if you need further assisstance.
-              <b><br>Stuck? Try a prompt: 
-                <button form = "question-submit" id = "question"><u><b>What is 24/7 Teach's goal?</b></u><img src = "images/arrow.png" width = "15px"></button>
-                <button form = "question-submit" id = "question"><u><b>How much does the UX/UI design course cost?</b></u><img src = "images/arrow.png" width = "15px"></button>
-                <button form = "question-submit" id = "question"><u><b>What types of course does 24/7 Teach offer?</b></u><img src = "images/arrow.png" width = "15px"></button>
+              Welcome to the chat! I'm here to help you. Click the <img src = "New Images/question-icon.png" width = "15px"> icon if you need further assisstance.
+              b><br>Stuck? Try a prompt: 
+                <button id = "prompt1" value = "What is 24/7 Teach's goal?"><u><b>What is 24/7 Teach's goal? </b></u><img src = "New Images/arrow-icon.png" width = "13px"></button>
+                <button id = "prompt2" value = "How much does the UX/UI design course cost?"><u><b>How much does the UX/UI design course cost? </b></u><img src = "New Images/arrow-icon.png" width = "13px"></button>
+                <button id = "prompt3" value = "What types of course does 24/7 Teach offer?"><u><b>What types of course does 24/7 Teach offer? </b></u><img src = "New Images/arrow-icon.png" width = "13px"></button>
               </b>
-            </p>
               
+            </p>
           </section>
           <form id="question-submit" onsubmit="return false">
-            <input id="question" name="question" type="text">
-            <button type="submit"><img src="images/send-icon.png" width="20px" alt="send-icon"></button>
+            <input id="question" name="question" type="text" placeholder = "Send a message">
+            <button type="submit"><img src="New Images/new-send-icon.png" width="20px" alt="send-icon"></button>
           </form>
         </section>
       </section>
