--- a/index.html
+++ b/index.html
@@ -10,18 +10,20 @@
     <section id="chat-bot">
       <section id="open-form">
         <header>
-          <section id="chat-bot-drop-down">
-            <button id="chat-bot-extra" class="chat-bot-button"><img src="images/three-dots.png" width="20px" alt="three-dots"></button><br/>
-            <section id="chat-bot-drop-down-content">
-              <button id="live-chat-start">Talk to a live representative</button>
-            </section>
-          </section>
           <img id= "header-logo" src = "New Images/orangelogo.png" width = "40px" alt = "24/7 Teach logo">
           <div>
             <span>Rebecca-AI</span>
             <span id = "short-intro"> Our AI powered chatbot can assist you. </span>
           </div>
-          <button id="chat-bot-close" class="chat-bot-button"><img src="New Images/x-icon.png" width="20px" alt="x"></button>
+          <section id = "header-buttons">
+            <button id="chat-bot-close" class="chat-bot-button"><img src="New Images/x-icon.png" width="10px" alt="x"></button>
+            <section id="chat-bot-drop-down">
+              <button id="chat-bot-extra" class="chat-bot-button"><img src="New Images/question-icon.png" width="20px" alt="three-dots"></button><br/>
+              <section id="chat-bot-drop-down-content">
+                <button id="live-chat-start">Talk to a live representative</button>
+              </section>
+            </section>
+          </section>
         </header>
         <section id="chat-bot-form">
           <p>Welcome to 24/7 live support. Our bot should be able to answer any questions you might have, but our customer support team is always available to help! Before we begin, please provide us with your email and name to better support you.</p><br/>
