--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
             <img src="New Images/orangelogo.png" width="30px" alt="24/7-teach-logo">
             <p>
               Welcome to the chat! I'm here to help you. Click the <img src = "New Images/question-icon.png" width = "15px"> icon if you need further assisstance.
-              b><br>Stuck? Try a prompt: 
-                <button id = "prompt1" value = "What is 24/7 Teach's goal?"><u><b>What is 24/7 Teach's goal? </b></u><img src = "New Images/arrow-icon.png" width = "13px"></button>
-                <button id = "prompt2" value = "How much does the UX/UI design course cost?"><u><b>How much does the UX/UI design course cost? </b></u><img src = "New Images/arrow-icon.png" width = "13px"></button>
-                <button id = "prompt3" value = "What types of course does 24/7 Teach offer?"><u><b>What types of course does 24/7 Teach offer? </b></u><img src = "New Images/arrow-icon.png" width = "13px"></button>
+              <br><br><b>Stuck? Try a prompt:</b>
+                <button id = "prompt1" value = "What is 24/7 Teach's goal?"><br><u><b>What is 24/7 Teach's goal?</b></u><img src = "New Images/arrow-icon.png" width = "15px"></button>
+                <button id = "prompt2" value = "How much does the UX/UI design course cost?"><br><u><b>How much does the UX/UI design course cost?</b></u><img src = "New Images/arrow-icon.png" width = "15px"></button>
+                <button id = "prompt3" value = "What types of course does 24/7 Teach offer?"><br><u><b>What types of course does 24/7 Teach offer?</b></u><img src = "New Images/arrow-icon.png" width = "15px"></button>
               </b>
               
             </p>
