--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
           <section id = "header-buttons">
             <button id="chat-bot-close" class="chat-bot-button"><img src="New Images/x-icon.png" width="10px" alt="x"></button>
             <section id="chat-bot-drop-down">
-              <button id="chat-bot-extra" class="chat-bot-button"><img src="New Images/question-icon.png" width="20px" alt="three-dots"></button><br/>
+              <button id="chat-bot-extra" class="chat-bot-button"><img src="New Images/question-icon.png" width="15px" alt="question-icon"></button><br/>
               <section id="chat-bot-drop-down-content">
-                <button id="live-chat-start">Talk to a live representative</button>
+                <button id="live-chat-start">Speak to a live representative</button>
               </section>
             </section>
           </section>
