Changes to question submit

--- a/index.html
+++ b/index.html
@@ -48,10 +48,12 @@
               
             </p>
           </section>
-          <form id="question-submit" onsubmit="return false">
-            <input id="question" name="question" type="text" placeholder = "Send a message">
-            <button type="submit"><img src="New Images/new-send-icon.png" width="20px" alt="send-icon"></button>
-          </form>
+          <section id = "submission-border">
+            <form id="question-submit" onsubmit="return false">
+              <input id="question" name="question" type="text" placeholder = "Send a message">
+              <button type="submit"><img src="New Images/new-send-icon.png" width="20px" alt="send-icon"></button>
+            </form>
+          </section>
         </section>
       </section>
 
